--- a/IncidentManagement.WebAPI/Properties/launchSettings.json
+++ b/IncidentManagement.WebAPI/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "http": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "api/incidents",
       "applicationUrl": "http://localhost:5230",
       "environmentVariables": {
@@ -22,7 +22,7 @@
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "api/incidents",
       "applicationUrl": "https://localhost:7293;http://localhost:5230",
       "environmentVariables": {
