--- a/IncidentManagement.WebAPI/IncidentManagement.WebAPI.csproj
+++ b/IncidentManagement.WebAPI/IncidentManagement.WebAPI.csproj
@@ -15,4 +15,9 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\IncidentManagement.Core\IncidentManagement.Core.csproj" />
+    <ProjectReference Include="..\IncidentManagement.Infrastructure\IncidentManagement.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
